version/0.16/_sources/api/solver/_autosummary/settings/markers.rst.txt
:orphan:

.. _markers:

markers
=======

.. autoclass:: ansys.fluent.core.solver.settings_232.markers.markers
    :show-inheritance:

.. rubric:: Methods

==========================================   ==============================

Method                                                              Summary

==========================================   ==============================
:ref:`list_properties <list_properties_1>`       'list_properties' command.

==========================================   ==============================

.. rubric:: Named object type

:ref:`markers_child <markers_child>`


.. rubric:: Included in:

======================   ===================

Parent                               Summary

======================   ===================
:ref:`curves <curves>`       'curves' child.

======================   ===================

