version/0.21/_sources/api/solver/_autosummary/settings/markers.rst.txt
:orphan:

.. _markers:

markers
=======

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.markers.markers
    :show-inheritance:

.. rubric:: Methods

========================================   ==========================================

Method                                                                        Summary

========================================   ==========================================
:ref:`list_properties <list_properties>`          List properties of selected object.

:ref:`resize <resize>`                         Set number of objects for list-object.

========================================   ==========================================

.. rubric:: Named object type

:ref:`markers_child <markers_child>`


.. rubric:: Included in:

========================   ===================================================

Parent                                                                 Summary

========================   ===================================================
:ref:`curves <curves_1>`       Choose line, marker style and color for Curves.

========================   ===================================================

